# mosaico

./: .gitignore  CITATION.bib  README.md  pyproject.toml  requirements.txt  setup.py
examples/: README.md  amr.py  iter.py  projection.py  rel_ex.py  simple.py  srl.py  stanza.py  wsd.py
src/mosaico/schema/: __init__.py  interlanguage_link.py  wikipage.py
src/mosaico/schema/annotations/: __init__.py  amr.py  base.py  cirrus.py  rel_ex.py  sectioning.py  srl.py  stanza.py  wikilinks.py  wsd.py
src/scripts/demo/: main.py
src/scripts/demo/renderers/: __init__.py  amr.py  raw.py  rel_ex.py  srl.py  stanza_views.py  wikimedia.py  wsd.py
