[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "mosaico"
version = "0.2.0"
description = "MOSAICo library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC-BY-NC-SA-4.0" }
authors = [{ name = "Luigi Procopio", email = "luigi@litus.ai" }]

keywords = []
classifiers = []

dependencies = [
    "beanie==1.23.6",
    "pydantic>=2.0.0",
    "tqdm",
    "wikiextractor==3.0.6",
]

[project.optional-dependencies]
build = [
    "edit-distance==1.0.6",
    "loguru",
    "nltk==3.6.5",
]
demo = ["streamlit", "st-annotated-text"]

[tool.pdm.scripts]
"demo" = "streamlit run src/scripts/demo/main.py --server.headless True"
